[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"
hex = "0.3.1"
secp256k1 = { version = "0.20", features = ["global-context"]}

[dependencies.curv-kzen]
git = "https://github.com/TrafficTse/curv-abridged.git"
branch = "master"

[profile.release]
opt-level = 2
